--- a/删除镜像.md
+++ b/删除镜像.md
@@ -4,4 +4,6 @@ docker images
 docker rmi hub.c.163.com/nce2/mysql:5.6
 
 docker rmi registry.docker-cn.com/library/nginx:latest
+
+docker rmi (IMAGE ID)
 ```
