--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -1,14 +1,25 @@
 ```
+# 下载
 docker pull nginx:1.12.2
 
+# 查看本地images
 docker images
 
+# 运行启动
 docker run --name nginx1.12.2 -d -p 80:80 -v /web:/usr/share/nginx/html:ro -d nginx:1.12.2
 
+# 查看容器
 docker ps -a
 
-docker run -t -i -p 80:80 nginx1.12.2 /bin/bash
+# 进入容器
 docker exec -it nginx1.12.2 /bin/bash
+```
+
+```
+docker run -it -p 80:80 nginx:1.12.2 /bin/bash
+service nginx start
+ 
+这种方式如果命令行(exit)退出则服务也将停止
 ```
 
 ----
