--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -23,12 +23,6 @@ service nginx start
 ```
 
 ----
-
-```
-这个还不行，稍后再试试
-
-docker run -p 80:80 --name nginx1.13.7 -v /data/www:/www -v /data/nginx/conf/nginx.conf:/etc/nginx/nginx.conf -v data/nginx/logs:/wwwlogs  -d registry.docker-cn.com/library/nginx:1.13.7
-```
  
 ```
  
@@ -43,8 +37,9 @@ docker run --name my-nginx -d -p 80:80 -v /webroot:/usr/share/nginx/html:ro -v /
 
 拷贝容器内的配置文件到本地，进行修改等操作
 docker cp nginx:/etc/nginx/nginx.conf /config/nginx.conf
+docker cp nginx1.12.2:/etc/nginx/nginx.conf /config/nginx.conf         （REPOSITORY + TAG）
 
-重新指定配置文件
+重新指定配置文件(先停掉服务)
 docker run --name my-nginx -d -p 80:80 -v /webroot:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -v /config/nginx.conf:/etc/nginx/nginx.conf:ro -d nginx
 
 查看运行的容器
