--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -8,6 +8,8 @@ docker images
 # 运行启动
 docker run --name nginx1.12.2 -d -p 80:80 -v /web:/usr/share/nginx/html:ro -d nginx:1.12.2
 
+docker run --name nginx1.12.2 -d -p 80:80 -v /web:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -v /config/nginx.conf:/etc/nginx/nginx.conf:ro -v /data/nginx/conf:/etc/nginx/conf.d -d nginx:1.12.2
+
 # 查看容器
 docker ps -a
 
