--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -6,9 +6,9 @@ docker pull nginx:1.12.2
 docker images
 
 # 运行启动
-docker run --name nginx1.12.2 -d -p 80:80 -v /web/test:/usr/share/nginx/html:ro -d nginx:1.12.2
+docker run --name nginx1.12.2 -p 80:80 -v /web/test:/usr/share/nginx/html:ro -d nginx:1.12.2
 
-docker run --name nginx1.12.2 -d -p 80:80 -v /web/test:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -d nginx:1.12.2
+docker run --name nginx1.12.2 -p 80:80 -v /web/test:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -d nginx:1.12.2
  
 目录那些会自动创建，不用手动建
  
