--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -1,21 +1,29 @@
+- 下载
 ```
-# 下载
 docker pull nginx:1.12.2
-
-# 查看本地images
+```
+- 查看本地images
+```
 docker images
+```
 
-# 运行启动
-docker run --name nginx1.12.2 -p 80:80 -v /web/test:/usr/share/nginx/html:ro -d nginx:1.12.2
+- 运行启动
+```
+docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -d nginx:1.12.2
+docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -d nginx:1.12.2
 
-docker run --name nginx1.12.2 -p 80:80 -v /web/test:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -d nginx:1.12.2
- 
 目录那些会自动创建，不用手动建
  
-# 查看容器
-docker ps -a
+在 宿主机和nginx容器内都创建 /data/www 的目录 下面就放网站目录 e.g: /data/www/test
+```
 
-# 进入容器
+- 查看容器状态
+```
+docker ps -a
+```
+
+- 进入容器
+```
 docker exec -it nginx1.12.2 /bin/bash
 ```
 
