--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -42,10 +42,10 @@ service nginx start
 docker pull nginx
 
 启动跑个静态网页，这儿简单介绍下ro,默认容器对这个目录有可读写权限，可以通过指定ro，将权限改为只读
-docker run --name my-nginx -d -p 80:80 -v /webroot:/usr/share/nginx/html:ro -d nginx
+docker run --name my-nginx -p 80:80 -v /webroot:/usr/share/nginx/html:ro -d nginx
 
 添加日志记录
-docker run --name my-nginx -d -p 80:80 -v /webroot:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -d nginx
+docker run --name my-nginx -p 80:80 -v /webroot:/usr/share/nginx/html:ro -v /logs:/var/log/nginx -d nginx
 
 拷贝容器内的配置文件到本地，进行修改等操作
 docker cp nginx:/etc/nginx/nginx.conf /config/nginx.conf
