--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -67,7 +67,7 @@ docker stop c4bfc0e2a5aa
 docker start c4bfc0e2a5aa
 
 进入容器
-sudo docker exec -it c4bfc0e2a5aa /bin/bash
+docker exec -it c4bfc0e2a5aa /bin/bash
 
 查看nginx目录
 cd /etc/nginx/
