--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -12,6 +12,8 @@ docker images
 docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -d nginx:1.12.2
 docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -d nginx:1.12.2
 
+/data/www:/data/www:ro -> ro 十分重要，意思是只读权限，如果不加，则会启动不成功
+ 
 目录那些会自动创建，不用手动建
  
 在 宿主机和nginx容器内都创建 /data/www 的目录 下面就放网站目录 e.g: /data/www/test
