--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -36,6 +36,29 @@ service nginx start
 这种方式如果命令行(exit)退出则服务也将停止
 ```
 
+- 进入容器后...
+```
+apt-get update
+apt-get install -y vim
+vim /etc/nginx/conf.d/default.conf
+```
+
+```
+server {
+    location / {
+        root   /data/www/test;        // <------------ 这里
+        index  index.html index.htm;
+    }
+
+    location ~ \.php$ {
+    #    root           html;
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /data/www/test/$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+}
+```
 ----
  
 ```
