--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -36,7 +36,7 @@ service nginx start
 这种方式如果命令行(exit)退出则服务也将停止
 ```
 
-- 进入容器后...
+- 进入容器后，修改nginx的网站配置
 ```
 apt-get update
 apt-get install -y vim
@@ -59,6 +59,25 @@ server {
     }
 }
 ```
+
+- 退出终端，创建访问的静态文件
+```
+exit;
+
+mkdir -p /data/www/test
+
+vim /data/www/test/index.html
+```
+ 
+- 重启服务，并访问
+```
+docker ps -a
+
+docker restart 4e4
+
+http://IP/
+```
+ 
 ----
  
 ```
