--- a/php/安装.md
+++ b/php/安装.md
@@ -1,4 +1,44 @@
 - 下载
 ```
-docker pull 7.2-fpm
+docker pull php:7.2.1-fpm
+```
+
+- 安装
+```
+docker run -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
+```
+ 
+# 配合nginx使用
+
+----
+
+- 获取IP
+```
+docker inspect php:7.2.1-fpm |grep '"IPAddress"'
+```
+
+- 进入nginx容器
+```
+docker exec -it 9dc90b44b319 /bin/bash
+```
+
+```
+    location ~ \.php$ {
+    #    root           html;
+        fastcgi_pass   172.17.0.2:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /data/www/test/$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+
+```
+
+- 重启后访问
+```
+docker ps -a
+
+docker restart 9dc90b44b319
+
+http://18.216.248.82/index.php
+
 ```
