--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -9,8 +9,14 @@ docker images
 
 - 运行启动
 ```
+# 指定网站目录
 docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -d nginx:1.12.2
+
+# 指定日志
 docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -d nginx:1.12.2
+
+# 执行配置文件
+docker run --name nginx1.13 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -v /configs/nginx:/etc/nginx/conf.d:ro -d nginx:1.13
 
 /data/www:/data/www:ro -> ro 十分重要，意思是只读权限，如果不加，则会启动不成功
  
@@ -115,4 +121,53 @@ docker exec -it c4bfc0e2a5aa /bin/bash
 
 查看nginx目录
 cd /etc/nginx/
+```
+
+----
+```nginx
+server {
+    listen       80;
+    server_name  localhost;
+
+    #charset koi8-r;
+    #access_log  /var/log/nginx/host.access.log  main;
+
+    location / {
+        root   /data/www/test;
+        index  x.html;
+    }
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    location ~ \.php$ {
+    #    root           html;
+        fastcgi_pass   172.17.0.2:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /data/www/test/$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
+}
+
 ```
