--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -24,6 +24,7 @@ docker run --name nginx1.13 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log
  
 在 宿主机和nginx容器内都创建 /data/www 的目录 下面就放网站目录 e.g: /data/www/test
 ```
+    * <a href="#默认配置文件">默认配置文件</a>
 
 - 查看容器状态
 ```
@@ -124,6 +125,7 @@ cd /etc/nginx/
 ```
 
 ----
+<a name="默认配置文件"></a>
 ```nginx
 server {
     listen       80;
