--- a/nginx/安装.md
+++ b/nginx/安装.md
@@ -16,7 +16,7 @@ docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -d nginx:1.12.2
 # 指定日志
 docker run --name nginx1.12.2 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -d nginx:1.12.2
 
-# 执行配置文件
+# 执行配置文件 （采用这个，要先创建 /configs/nginx 并创建 default.conf 文件）
 docker run --name nginx1.13 -p 80:80 -v /data/www:/data/www:ro -v /logs:/var/log/nginx -v /configs/nginx:/etc/nginx/conf.d:ro -d nginx:1.13
 
 /data/www:/data/www:ro -> ro 十分重要，意思是只读权限，如果不加，则会启动不成功
