--- a/mysql/安装.md
+++ b/mysql/安装.md
@@ -17,8 +17,7 @@ docker rmi hub.c.163.com/nce2/mysql:5.6
 
 # 创建配置文件
 mkdir -p /data/mysql/conf
-cd /data/mysql/conf
-touch my.cnf
+touch /data/mysql/conf/my.cnf
 
 # 启动
 docker run -p 3306:3306 --name mysql56 -v /data/mysql/conf/my.cnf:/etc/mysql/my.cnf -v /data/mysql/logs:/logs -v /data/mysql/data:/mysql_data -e MYSQL_ROOT_PASSWORD=123456 -d mysql:5.6
