--- a/php/安装.md
+++ b/php/安装.md
@@ -4,12 +4,16 @@
 ```
 docker pull php:7.2.1-fpm
 ```
-
-- 安装
+ 
+- 安装
 ```
 docker run -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
 ```
- 
+- 与mysql容器通信
+```
+docker run --link mysql56 -e MYSQL_ROOT_PASSWORD=123456 -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
+```
+   
 
 #  配合nginx使用
 
