--- a/php/安装.md
+++ b/php/安装.md
@@ -14,6 +14,8 @@ docker run -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:
 -  与mysql容器通信
 ```
 docker run --link mysql56 -e MYSQL_ROOT_PASSWORD=123456 -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
+
+mysql56 是 mysql容器启动时的命名 --name
 ```
    
 
