--- a/php/安装.md
+++ b/php/安装.md
@@ -10,7 +10,14 @@ docker pull php:7.2.1-fpm
 docker run -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
 ```
 
+-  安装扩展
+```
+进入容器
 
+docker-php-ext-install  pdo_mysql
+docker-php-ext-install  mysqli
+```
+ 
 -  与mysql容器通信
 ```
 docker run --link mysql56 -e MYSQL_ROOT_PASSWORD=123456 -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:/usr/local/etc/php -v /logs:/phplogs -d php:7.2.1-fpm
