--- a/php/安装.md
+++ b/php/安装.md
@@ -12,7 +12,7 @@ docker run -p 9000:9000 --name php-7.2.1-fpm -v /data/www:/data/www -v /configs:
 
 -  安装扩展
 ```
-进入容器
+进入容器 docker exec -it 4b7 /bin/bash
 
 docker-php-ext-install  pdo_mysql
 docker-php-ext-install  mysqli
