--- a/php/安装.md
+++ b/php/安装.md
@@ -60,3 +60,18 @@ docker restart 9dc90b44b319
 http://18.216.248.82/index.php
 
 ```
+
+# 测试数据库连接
+```php
+
+echo date("Y-m-d H:i:s")."\n";
+
+try {
+    $conn = new PDO('mysql:host=mysql56;port=3306;dbname=mysql;charset=utf8', 'root', '123456');
+} catch (PDOException $e) {
+    echo 'Connection failed: ' . $e->getMessage();
+}
+
+echo 'conn success'."\n";
+
+```
