--- a/组合.md
+++ b/组合.md
@@ -7,24 +7,54 @@
 phpinfo();
 ```
 
+- 配置nginx
+	- /home/nginx/conf/conf.d
+	- vim test.conf
+```
+server {
+    listen       80;
+    server_name  localhost;
+
+    location / {
+        root   /usr/share/nginx/html/test;		# 注意：这里一定要指定到具体目录
+        index  index.html index.htm index.php;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass   php:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  /www/test/$fastcgi_script_name; # 注意：这里一定要指定到具体目录
+        include        fastcgi_params;
+    }
+}
+```
+
 ----
 
 # 创建容器
-- nginx
-```
-docker pull nginx
-docker run --name docker.nginx -p 18700:80 -d \
-    -v /home/wwwroot/test:/usr/share/nginx/html:ro \
-    -v /home/nginx/conf/conf.d:/etc/nginx/conf.d:ro \
-    -v /home/nginx/logs:/var/log/nginx \
-    --link docker.php.fpm.7.1:php \
-    nginx
-```
 
 - php-fpm
 ```
 docker pull php:7.1-fpm
+
 docker run --name docker.php.fpm.7.1 -d \
-    -v /home/wwwroot/test:/www \
+    -v /home/wwwroot:/www \
 	php:7.1-fpm
+```
+
+- nginx
+```
+docker pull nginx
+
+docker run --name docker.nginx -p 18700:80 -d \
+    -v /home/wwwroot:/usr/share/nginx/html:ro \
+    -v /home/nginx/conf/conf.d:/etc/nginx/conf.d:ro \
+    -v /home/nginx/logs:/var/log/nginx \
+    --link docker.php.fpm.7.1:php \
+    nginx
 ```
